Corrections and misalignments in form element

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -14,11 +14,14 @@ nav {
 .heading {
   font-family: "Bungee";
   margin: 1.5em;
+
 }
 .right-header {
-  margin: 1.5em;
+  margin-top: 1.5em;
+  margin-right: 1.5em;
   display: flex;
   flex-direction: column;
+
 }
 .area {
   font-weight: 30;
